index.htmlの中身の記入

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>あとでvscodeで中身を書く</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scals=1.0"/>
+        <title>document</title>
+        <link href="style.css" rel="stylesheet" />
+
+    </head>
+    <body>
+        <h1>あとでvscodeで書く</h1>
+    </body>
+</html>
