--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scals=1.0"/>
@@ -8,6 +8,6 @@
 
     </head>
     <body>
-        <h1>あとでvscodeで書く</h1>
+        <h1>変更しました</h1>
     </body>
 </html>
