index.htmlｔｐstyle.cssを変更

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     </head>
     <body>
-        <h1>変更しました</h1>
+        <h1>練習用のページ</h1>
+        <p>
+            練習用のページだよ
+        </p>
     </body>
 </html>
